# CMake

./: .gitignore  compile.bat
module_01/: adder.h  divider.cpp  main.cpp  printer.h
module_02/: CMakeLists.txt  adder.cpp  console_reader.h
module_03/: CMakeLists.txt  main.cpp
module_03/input/: CMakeLists.txt
module_03/input/src/: console_reader.cpp
module_03/math/: CMakeLists.txt
module_03/output/: CMakeLists.txt
module_04/: CMakeLists.txt
module_05/: CMakeLists.txt
module_06/ConsoleLib/: CMakeLists.txt
module_06/MathLib/include/MathLib/: adder.h
module_07/: CMakeLists.txt
module_07/ConsoleLib/: CMakeLists.txt
module_07/ConsoleLib/include/ConsoleLib/: reader.h
module_07/MathLib/: CMakeLists.txt
module_07/MathLib/src/: divider.cpp
module_07/test/: CMakeLists.txt
module_09/GTK_FindModule/: main.cpp
module_09/GTK_PC/: CMakeLists.txt
official/step_01/: CMakeLists.txt  tutorial.cxx
official/step_02/: CMakeLists.txt  tutorial.cxx
official/step_02/MathFunctions/: CMakeLists.txt
official/step_03/: CMakeLists.txt
official/step_03/MathFunctions/: CMakeLists.txt
official/step_04/: CMakeLists.txt
official/step_05/: CMakeLists.txt
official/step_05/MathFunctions/: CMakeLists.txt
official/step_07/MathFunctions/: CMakeLists.txt  mysqrt.cxx
official/step_07/MathFunctions/check/: check_exp.cpp  check_log.cpp
official/step_08/MathFunctions/: CMakeLists.txt  MakeTable.cmake  mysqrt.cxx
official/step_10/MathFunctions/: CMakeLists.txt  MathFunctions.h  MathFunctions_export.h
official/step_11/: CMakeLists.txt
official/step_11/MathFunctions/: CMakeLists.txt
udemy/module_01/: divider.h  makefile  printer.cpp
udemy/module_02/: console_printer.cpp  console_printer.h  console_reader.cpp  main.cpp
udemy/module_03/output/src/: console_printer.cpp
udemy/module_06/: CMakeLists.txt
udemy/module_06/ConsoleLib/include/ConsoleLib/: printer.h
udemy/module_06/ConsoleLib/src/: reader.cpp
udemy/module_06/MathLib/: CMakeLists.txt
udemy/module_07/: main.cpp
udemy/module_07/ConsoleLib/src/: printer.cpp
udemy/module_07/MathLib/: CMakeLists.txt
udemy/module_07/MathLib/include/MathLib/: divider.h
udemy/module_07/MathLib/src/: adder.cpp
udemy/module_07/test/: main.cpp
udemy/module_09/App_OpenCV/: CMakeLists.txt  main.cpp
udemy/module_09/GTK_FindModule/: CMakeLists.txt
udemy/module_09/GTK_FindModule/CMake/modules/: FindGTK3.cmake
